feat(helm): add pod securityContext and enhanced probe configuration
This commit adds two important security and operational enhancements to the Coder Helm chart:

1. **Pod-level securityContext support**: Adds  configuration
   to allow setting pod-level security settings like . This is essential for
   proper file permissions when mounting TLS certificates for mTLS PostgreSQL connections.

   Example usage for mTLS PostgreSQL:

2. **Enhanced probe configuration**: Extends readiness and liveness probe configuration
   beyond just  to include:
   - : How often to perform the probe
   - : Probe timeout duration
   - : Required consecutive successes
   - : Allowed consecutive failures

   This provides fine-grained control over probe behavior for production deployments.

These changes maintain backward compatibility while enabling secure mTLS database
connections and better operational control over health checking.

Fixes: Security requirements for mTLS PostgreSQL deployments
Closes: Enhanced probe configuration request

Co-authored-by: kylecarbs <7122116+kylecarbs@users.noreply.github.com>

--- a/helm/libcoder/templates/_coder.yaml
+++ b/helm/libcoder/templates/_coder.yaml
@@ -48,6 +48,10 @@ spec:
       topologySpreadConstraints:
       {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.coder.podSecurityContext }}
+      securityContext:
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
       {{- with .Values.coder.initContainers }}
       initContainers:
       {{ toYaml . | nindent 8 }}
