--- a/helm/libcoder/templates/_coder.yaml
+++ b/helm/libcoder/templates/_coder.yaml
@@ -31,6 +31,10 @@ spec:
       imagePullSecrets:
       {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.coder.podSecurityContext }}
+      securityContext:
+      {{- toYaml . | nindent 8 }}
+      {{- end }}
       terminationGracePeriodSeconds: 60
       {{- with .Values.coder.affinity }}
       affinity:
@@ -79,6 +83,42 @@ resources:
 lifecycle:
   {{- toYaml .Values.coder.lifecycle | nindent 2 }}
 securityContext: {{ toYaml .Values.coder.securityContext | nindent 2 }}
+readinessProbe:
+  httpGet:
+    path: /healthz
+    port: 8080
+    scheme: HTTP
+  initialDelaySeconds: {{ .Values.coder.readinessProbe.initialDelaySeconds }}
+  {{- if hasKey .Values.coder.readinessProbe "periodSeconds" }}
+  periodSeconds: {{ .Values.coder.readinessProbe.periodSeconds }}
+  {{- end }}
+  {{- if hasKey .Values.coder.readinessProbe "timeoutSeconds" }}
+  timeoutSeconds: {{ .Values.coder.readinessProbe.timeoutSeconds }}
+  {{- end }}
+  {{- if hasKey .Values.coder.readinessProbe "successThreshold" }}
+  successThreshold: {{ .Values.coder.readinessProbe.successThreshold }}
+  {{- end }}
+  {{- if hasKey .Values.coder.readinessProbe "failureThreshold" }}
+  failureThreshold: {{ .Values.coder.readinessProbe.failureThreshold }}
+  {{- end }}
+livenessProbe:
+  httpGet:
+    path: /healthz
+    port: 8080
+    scheme: HTTP
+  initialDelaySeconds: {{ .Values.coder.livenessProbe.initialDelaySeconds }}
+  {{- if hasKey .Values.coder.livenessProbe "periodSeconds" }}
+  periodSeconds: {{ .Values.coder.livenessProbe.periodSeconds }}
+  {{- end }}
+  {{- if hasKey .Values.coder.livenessProbe "timeoutSeconds" }}
+  timeoutSeconds: {{ .Values.coder.livenessProbe.timeoutSeconds }}
+  {{- end }}
+  {{- if hasKey .Values.coder.livenessProbe "successThreshold" }}
+  successThreshold: {{ .Values.coder.livenessProbe.successThreshold }}
+  {{- end }}
+  {{- if hasKey .Values.coder.livenessProbe "failureThreshold" }}
+  failureThreshold: {{ .Values.coder.livenessProbe.failureThreshold }}
+  {{- end }}
 {{ include "coder.volumeMounts" . }}
 {{- end -}}
 {{- define "libcoder.containerspec" -}}
