fix(helm): make probe configuration optional for provisioner chart compatibility
The provisioner chart uses the same libcoder templates but doesn't have
probe configuration in its values.yaml. This change makes the probe
configuration conditional to prevent nil pointer errors when the
provisioner chart is rendered.

Changes:
- Wrap readinessProbe and livenessProbe blocks with conditional checks
- Only render probe configuration when .Values.coder.readinessProbe/.livenessProbe exist
- Maintains backward compatibility for both coder and provisioner charts

Fixes helm lint failures in CI.

--- a/helm/libcoder/templates/_coder.yaml
+++ b/helm/libcoder/templates/_coder.yaml
@@ -83,6 +83,7 @@ resources:
 lifecycle:
   {{- toYaml .Values.coder.lifecycle | nindent 2 }}
 securityContext: {{ toYaml .Values.coder.securityContext | nindent 2 }}
+{{- if .Values.coder.readinessProbe }}
 readinessProbe:
   httpGet:
     path: /healthz
@@ -101,6 +102,8 @@ readinessProbe:
   {{- if hasKey .Values.coder.readinessProbe "failureThreshold" }}
   failureThreshold: {{ .Values.coder.readinessProbe.failureThreshold }}
   {{- end }}
+{{- end }}
+{{- if .Values.coder.livenessProbe }}
 livenessProbe:
   httpGet:
     path: /healthz
@@ -119,6 +122,7 @@ livenessProbe:
   {{- if hasKey .Values.coder.livenessProbe "failureThreshold" }}
   failureThreshold: {{ .Values.coder.livenessProbe.failureThreshold }}
   {{- end }}
+{{- end }}
 {{ include "coder.volumeMounts" . }}
 {{- end -}}
 {{- define "libcoder.containerspec" -}}
