--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -20,6 +20,7 @@ scripts/apitypings/ @Emyrk
 scripts/gensite/ @aslilac
 
 site/ @aslilac
+site/src/hooks/ @Parkreiner
 # These rules intentionally do not specify any owners. More specific rules
 # override less specific rules, so these files are "ignored" by the site/ rule.
 site/e2e/google/protobuf/timestampGenerated.ts
