--- a/site/package.json
+++ b/site/package.json
@@ -205,6 +205,7 @@
 			"@babel/runtime": "7.26.10",
 			"@babel/helpers": "7.26.10",
 			"esbuild": "^0.25.0",
+			"form-data": "4.0.4",
 			"prismjs": "1.30.0"
 		}
 	}
