--- a/site/package.json
+++ b/site/package.json
@@ -97,6 +97,7 @@
 		"react-color": "2.19.3",
 		"react-confetti": "6.4.0",
 		"react-date-range": "1.4.0",
+		"react-day-picker": "9.13.1",
 		"react-dom": "19.2.2",
 		"react-markdown": "9.1.0",
 		"react-query": "npm:@tanstack/react-query@5.77.0",
