feat: add configurable docker group_add to coderd service

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -31,6 +31,10 @@ services:
       DOCKER_HOST: "${DOCKER_HOST:-unix:///var/run/docker.sock}"
       GOMODCACHE: /go-cache/mod
       GOCACHE: /go-cache/build
+    # Add the Docker group so coderd can access the Docker socket.
+    # Override DOCKER_GROUP_ID if your host's docker group is not 999.
+    group_add:
+      - "${DOCKER_GROUP_ID:-999}"
     ports:
       - "3000:3000"
     healthcheck:
