--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1194,6 +1194,11 @@
 					"path": "./admin/integrations/jfrog-artifactory.md"
 				},
 				{
+					"title": "Mirror Coder Registry with Artifactory",
+					"description": "Use JFrog Artifactory to mirror the Coder Registry for air-gapped deployments",
+					"path": "./install/registry-mirror-artifactory.md"
+				},
+				{
 					"title": "Istio Integration",
 					"description": "Integrate Coder with Istio",
 					"path": "./admin/integrations/istio.md"
