--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,11 +16,31 @@ services:
       timeout: 5s
       retries: 10
 
+  build-slim:
+    image: golang:1.24
+    working_dir: /app
+    environment:
+      GOMODCACHE: /go-cache/mod
+      GOCACHE: /go-cache/build
+    volumes:
+      - .:/app
+      - go_cache:/go-cache
+      - coder_cache:/cache
+    command: >
+      sh -c '
+        make build-slim &&
+        mkdir -p /cache/site/orig/bin &&
+        cp build/coder-slim_*_*_* /cache/site/orig/bin/ &&
+        echo "Slim binaries built and cached."
+      '
+
   coderd:
-    image: golang:1.25
+    image: golang:1.24
     depends_on:
       database:
         condition: service_healthy
+      build-slim:
+        condition: service_completed_successfully
     environment:
       CODER_PG_CONNECTION_URL: "postgresql://coder:coder@database:5432/coder?sslmode=disable"
       CODER_HTTP_ADDRESS: "0.0.0.0:3000"
@@ -30,6 +50,8 @@ services:
       CODER_TELEMETRY_ENABLE: "false"
       GOMODCACHE: /go-cache/mod
       GOCACHE: /go-cache/build
+      CODER_CACHE_DIRECTORY: /cache
+      DOCKER_HOST: "${DOCKER_HOST:-unix:///var/run/docker.sock}"
     # Add the Docker group so coderd can access the Docker socket.
     # Override DOCKER_GROUP if your host's docker group is not 999.
     group_add:
@@ -46,6 +68,7 @@ services:
     volumes:
       - .:/app
       - go_cache:/go-cache
+      - coder_cache:/cache
       - coderv2_config:/root/.config/coderv2
       - "${DOCKER_SOCKET:-/var/run/docker.sock}:/var/run/docker.sock"
     command: >
@@ -66,6 +89,7 @@ services:
     working_dir: /app
     environment:
       CODER_URL: "http://coderd:3000"
+      DOCKER_HOST: "${DOCKER_HOST:-unix:///var/run/docker.sock}"
       GOMODCACHE: /go-cache/mod
       GOCACHE: /go-cache/build
     volumes:
@@ -94,4 +118,5 @@ volumes:
   coder_dev_data:
   coderv2_config:
   go_cache:
+  coder_cache:
   site_node_modules:
