fix: run dev containers as root to fix volume permissions
The oss-dogfood image defaults to the coder user, but named volumes
are created root-owned. Run as root (user: 0:0) in all dev services
to avoid permission denied errors on shared volumes.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,6 +18,7 @@ services:
 
   build-slim:
     image: codercom/oss-dogfood:latest
+    user: "0:0"
     working_dir: /app
     environment:
       GOMODCACHE: /go-cache/mod
@@ -36,6 +37,7 @@ services:
 
   coderd:
     image: codercom/oss-dogfood:latest
+    user: "0:0"
     depends_on:
       database:
         condition: service_healthy
@@ -81,6 +83,7 @@ services:
 
   setup:
     image: codercom/oss-dogfood:latest
+    user: "0:0"
     depends_on:
       coderd:
         condition: service_healthy
@@ -99,6 +102,7 @@ services:
 
   site:
     image: codercom/oss-dogfood:latest
+    user: "0:0"
     depends_on:
       setup:
         condition: service_completed_successfully
