fix: copy correctly-named slim binaries from site/out/bin
make build-slim produces build/coder-slim_{version}_{os}_{arch} but
also copies them to site/out/bin/coder-{os}-{arch} with the names
the bin handler expects. Copy from site/out/bin/ so the agent
download endpoint finds them.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -50,7 +50,7 @@ services:
       sh -c '
         make build-slim &&
         mkdir -p /cache/site/orig/bin &&
-        cp build/coder-slim_*_*_* /cache/site/orig/bin/ &&
+        cp site/out/bin/coder-* /cache/site/orig/bin/ &&
         echo "Slim binaries built and cached."
       '
 
